[package]
name = "peering"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["full"] }
structopt = "0.3.25"
sha2 = "0.9.8"
generic-array = "0.14.4"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.6"

[dev-dependencies]
quickcheck = "1.0.3"
