[package]
name = "annares"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "annares-node"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["full"] }
structopt = "0.3.25"
sha2 = "0.9.8"
generic-array = "0.14.4"
hex = "0.4.3"
futures = "0.3.18"
tracing = "0.1.29"
strum = "0.23.0"
strum_macros = "0.23.1"
tracing-appender = "0.2.0"
rand = "0.6.1"
tokio-retry = "0.3"
itertools = "0.10.3"

[dependencies.tracing-subscriber]
features = ["std", "env-filter"]
version = "0.3.3"

[build-dependencies]
tonic-build = "0.6"

[dev-dependencies]
quickcheck = "1.0.3"
