[package]
name = "annares"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "annares-node"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["full"] }
structopt = "0.3.25"
sha2 = "0.9.8"
generic-array = "0.14.4"
hex = "0.4.3"
futures = "0.3.18"
strum = "0.23.0"
strum_macros = "0.23.1"
tracing-appender = "0.2.0"
rand = "0.6.1"
tokio-retry = "0.3"
itertools = "0.10.3"
mockall = "0.10.2"
mockall_double = "0.2.0"
maplit = "1.0.2"
opentelemetry = { version = "0.14", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.13", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-opentelemetry = "0.13"
lazy_static = "1.4.0"
tracing-futures = "0.2"

[build-dependencies]
tonic-build = "0.6"

[dev-dependencies]
quickcheck = "1.0.3"
